--- a/public/assets/index.css
+++ b/public/assets/index.css
@@ -1,5 +1,5 @@
 /* font-family: 'Nunito', sans-serif; */
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600;700;800&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -13,16 +13,18 @@
     rgba(243, 197, 82, 0.6) 20%,
     rgba(243, 197, 82, 1) 100%
   );
+
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .home-header {
+  background: url(/image/Group23.png) right top / 45% no-repeat;
   background-color: rgba(255, 255, 255, 1);
   height: 90vh;
   box-shadow: 0px 40px 80px 0px rgba(0, 0, 0, 0.25);
-  width: 90%;
+  width: 80%;
   border-radius: 30px;
 }
 /* __________________________________ */
@@ -36,12 +38,16 @@
 .header {
   width: 20%;
   font-size: 2rem;
+  /* font-weight: 400; */
   letter-spacing: 20px;
   display: flex;
   justify-content: space-evenly;
   align-items: baseline;
 
   /* margin-left: 5%; */
+}
+.header h1 {
+  font-weight: 300;
 }
 
 .navigation {
@@ -51,6 +57,7 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
+  margin-left: 12%;
 }
 .navigation li {
   list-style: none;
@@ -63,4 +70,56 @@
 .navigation a:hover {
   color: #daa520;
   font-weight: 800;
+}
+.singup {
+  border: 1px solid black;
+  padding: 10px 30px;
+  border-radius: 5px;
+  background-color: #f9bdbd;
+}
+.looking {
+  margin-top: 10%;
+  margin-left: 10%;
+}
+.looking p {
+  font-size: 3rem;
+  width: 50%;
+  font-weight: 200;
+}
+.looking span {
+  font-weight: 600;
+}
+.looking h1 {
+  font-size: 5rem;
+  width: 40%;
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+.looking button {
+  padding: 1% 3%;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #daa520;
+  border-radius: 5px;
+  border: 3px solid #daa520;
+}
+.div1-about {
+  width: 80%;
+  display: flex;
+
+  align-items: baseline;
+  margin-top: 10%;
+  margin-left: 10%;
+}
+.div1-about h3 {
+  font-size: 4rem;
+  font-weight: 300;
+  letter-spacing: 5px;
+  margin-right: 1%;
+}
+.div1-about h1 {
+  font-size: 6rem;
+  font-weight: 800;
+  margin-left: 1%;
+  color: rgba(34, 34, 34, 0.1);
 }
